objects/LLC_BI__Checklist__c.object
<CustomObject>
    <description>A Checklist defines a list of Requirements to be fulfilled in order to complete a business process or workflow.</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related relationship record which this Checklist pertains.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Actual_Duration_Days__c</fullName>
        <description>This optional field contains the number of days taken to complete this Checklist.</description>
        <inlineHelpText>This optional field contains the number of days taken to complete this Checklist.</inlineHelpText>
        <label>Actual Duration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This optional field is automatically populated with the value that is used to group checklists together.</description>
        <inlineHelpText>This optional field is automatically populated with the value that is used to group checklists together.</inlineHelpText>
        <label>Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Id__c</fullName>
        <description>This required field contains the id of the sObject record to which this Checklist pertains.</description>
        <externalId>true</externalId>
        <inlineHelpText>This required field contains the id of the sObject record to which this Checklist pertains.</inlineHelpText>
        <label>Context Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Context_Type__c</fullName>
        <description>This required field contains the fully qualified name of the sObject type to which this Checklist pertains.</description>
        <inlineHelpText>This required field contains the fully qualified name of the sObject type to which this Checklist pertains.</inlineHelpText>
        <label>Context Type</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Expected_Duration_Days__c</fullName>
        <description>This optional field contains the number of days expected to complete this Checklist.</description>
        <inlineHelpText>This optional field contains the number of days expected to complete this Checklist.</inlineHelpText>
        <label>Expected Duration Days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Template__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field to indicate this checklist is a template.</description>
        <inlineHelpText>Check this field to indicate this checklist is a template.</inlineHelpText>
        <label>Is Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan_Collateral2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Collateral Pledged record which this Checklist pertains.</description>
        <label>Collateral Pledged</label>
        <referenceTo>LLC_BI__Loan_Collateral2__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Loan record which this Checklist pertains.</description>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Product Package record which this Checklist pertains.</description>
        <label>Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Status__c</fullName>
        <description>This required field contains the current state of this Checklist.</description>
        <inlineHelpText>This required field contains the current state of this Checklist.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Requirement_Statuses</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Template__c</fullName>
        <description>This optional field contains the developer name of the Checklist Template on which this Checklist is based.</description>
        <externalId>true</externalId>
        <inlineHelpText>This optional field contains the developer name of the Checklist Template on which this Checklist is based.</inlineHelpText>
        <label>Template</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Treasury_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related Treasury Service record which this Checklist pertains.</description>
        <label>Treasury Service</label>
        <referenceTo>LLC_BI__Treasury_Service__c</referenceTo>
        <relationshipLabel>Checklists</relationshipLabel>
        <relationshipName>Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated, the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Checklist</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>